<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">playerskin</string>
    <string name="letv_network_message">(>﹏&lt;)当前网络处于非wifi状态，请检查网络</string>
    <string name="letv_notice_message">(>﹏&lt;)播放失败了，重新播放一下试试？</string>
    <string name="replay">重新播放</string>
    <string name="submit_error_info">提交反馈</string>

    <string name="online_feedback">在线反馈</string>
    <string name="problem">我遇到的问题</string>
    <string name="select">为了更好的解决您反馈的问题，请尽量在出现问题的网络环境下进行反馈(可多选)：</string>
    <string name="no_play">无法播放</string>
    <string name="play_slow">播放卡</string>
    <string name="pic_sound_problem">画面/声音有问题</string>
    <string name="other">其他</string>
    <string name="write_proposal">请详细写下您的问题和建议吧:</string>
    <string name="phone">您的联系方式(必填)：</string>
    <string name="number_qq">手机或QQ</string>
    <string name="confirm_report">确认举报吗？</string>
    <string name="sure">确认</string>
    <string name="cancel">取消</string>
    <string name="no_signal">暂无信号</string>
    <string name="seat_one">机位一</string>
    <string name="refresh_fail">刷新失败，提交反馈</string>

    <string name="network_none">无网络,请稍后再试</string>
    <string name="request_fail">网络请求失败</string>
    <string name="play_error">播放器内部错误</string>
    <string name="net_fail">网络访问失败</string>
    <string name="net_error">无法连接到网络，请检查后重试</string>
    <string name="play_fail">播放失败</string>
    <string name="people_more">超出观看人数，无法播放</string>

    <string name="live_sig_recovery">直播信号已恢复</string>
    <string name="live_no_sig">→_→暂无直播信号，请稍等</string>
    <string name="live_no_start">→_→ 直播还没有开始，请稍候再试试吧</string>
    <string name="live_end">→_→抱歉，直播结束</string>

    <string name="proxy_black_list">代理服务器出现黑名单，无法播放</string>
    <string name="linkshell_fail">加密失败，无法播放</string>
    <string name="no_live_plan">无直播计划，无法播放</string>
    
    <string name="video_camera">机位</string>
    
	<string name="error_code">错误代码:</string>
	<string name="no_video">没有该视频</string>
	<string name="is_playing">正在播放:</string>
	<string name="leave_contact_hint">填写您的联系方式，方便我们和您联系</string>
	<string name="no_network_hint">没有网络，请稍后再试</string>
	<string name="submitting">正在提交中...</string>
	<string name="feedback_submit_success">反馈提交成功</string>
	<string name="feedback_submit_failed">网络错误，反馈提交失败</string>
	<string name="your_phone_not_support">您的手机不支持该功能</string>
	<string name="returned_to_live_time">已经回到最新播放时间啦</string>
	<string name="ad">广告&#160;</string>
	<string name="back_to_live">返回直播</string>
	<string name="submit">提交</string>
    <string name="clear_log">清除日志</string>

    <!--关于4g的新增提示，英文版需要同步-->
    <string name="mobile_tip">您在使用运营商网络，继续观看会产生流量费用</string>
    <string name="continue_play">继续观看</string>
    <string name="cancel_play">取消观看</string>
</resources>
