<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#90000000"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/letv_notice_message"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_error_replay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#6A42EC"
                    android:layout_marginRight="20dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:textColor="@android:color/white"
                    android:text="@string/replay"/>
                <Button
                    android:id="@+id/btn_error_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#6A42EC"
                    android:layout_marginRight="20dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:textColor="@android:color/white"
                    android:text="@string/submit_error_info"/>
                <!--android:background="@drawable/home_btn_bg"-->

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/tv_error_feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/refresh_fail"
                    android:visibility="gone" />
            </RelativeLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_error_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_code"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/tv_error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_video"
            android:textColor="#80ffffff"
            android:textSize="10sp" />
    </LinearLayout>

</FrameLayout>